--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ Although you can use them, for a more unique website, replace these images with 
         <div class="contact">
         	<div class="container">
 				<h2 class="section-heading">联系我们</h2>
-				<p><span class="glyphicon glyphicon-earphone"></span><br> +86(021) 20893028</p>
+				<p><span class="glyphicon glyphicon-earphone"></span><br> +86(057) 20893028</p>
 				<p><span class="glyphicon glyphicon-envelope"></span><br> shadowconnect@gmail.com</p>
         	</div>
         </div>
@@ -186,7 +186,7 @@ Although you can use them, for a more unique website, replace these images with 
         <!-- Copyright etc -->
         <div class="small-print">
         	<div class="container">
-        		<p>Copyright&copy;outxx.com 上海影桥信息科技有限公司 2018 沪ICP备16053198号</p>
+        		<p>Copyright&copy;outxx.com 贵州xxxx有限公司 2025 贵ICP备xxxxx号</p>
         	</div>
         </div>
         
